# cpp-doodle-jump-clone

./: .gitignore  CMakeLists.txt  LevelManager.cpp  LevelManager.h  PhysicsServer.cpp  PhysicsServer.h  Player.cpp  Player.h  README.md  ResourceManager.cpp  ResourceManager.h  ScreenSaver.cpp  ScreenSaver.h  main.cpp
allegro/: Allegro.cpp  Allegro.h  AllegroBase.cpp  AllegroBase.hpp  Game.cpp
objects/: Collider.cpp  Collider.h  GameObject.cpp  GameObject.h  Sprite.cpp  Sprite.h  Transform.cpp  Transform.h
objects/content/: Content.cpp  Spring.cpp
objects/enemies/: BigEnemy.h  Enemy.cpp  Enemy.h  EnemyFactory.cpp  EnemyFactory.h  FlyingEnemy.h  SmallEnemy.h
objects/simpleShapes/: ColorRect.cpp  ColorRect.h
shapes/: Circle.cpp  Circle.h  Shape.cpp  Shape.h  ShapeFactory.cpp  ShapeFactory.h  Square.cpp  Square.h
sprites/photoshop project files/: enemy_simple_dead.psd  enemy_simple_grin.psd  player_dead_left.psd
src/: LevelManager.cpp  LevelManager.h  PhysicsServer.cpp  PhysicsServer.h  Player.cpp  Player.h  ResourceManager.cpp  ResourceManager.h  ScreenSaver.cpp  ScreenSaver.h  main.cpp
src/allegro/: AllegroBase.cpp  AllegroBase.hpp  Game.cpp  Game.h
src/objects/: Collider.cpp  Collider.h  GameObject.cpp  GameObject.h  Sprite.cpp  Sprite.h
src/objects/content/: Content.cpp  Content.h  Spring.cpp  Spring.h
src/objects/enemies/: BigEnemy.h  Enemy.cpp  Enemy.h  EnemyFactory.cpp  EnemyFactory.h  FlyingEnemy.h  SmallEnemy.h
src/util/: Vector2.cpp  Vector2.h  constants.h  utils.h
util/: Vector2.cpp  Vector2.h  constants.h  utils.h
